[package]
name = "rc4_encryptor"
version = "1.0.0"
edition = "2021"
authors = ["C2Pain"]

[dependencies]
windows = { version = "0.52.0", features = ["Win32_System_Memory", "Win32_System_Threading", "Win32_Security", "Win32_Foundation"] }
rc4 = "0.1.0"
generic-array = "0.14.6"
typenum = "1.14.0"

[profile.release]
pic = true